# pyfva

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  README.rst  build_code.sh  build_diagram.sh  pyproject.toml  requirements.txt  run_test.sh  setup.py
demo/: gunicorn_conf.py  manage.py  receptor.py  requirements.txt  run_receptor.sh  settings.py  urls.py  views.py  wsgi.py
docs/: Makefile  build_doc.sh  make.bat
docs/source/: clientes.rst  conf.py  formatos.rst  formatos_en_fva.rst  index.rst  instalacion.rst  receptor.rst  tutorial.rst
pyfva/: __init__.py  constants.py  logger.py  test.py  test_validador.py
pyfva/clientes/: autenticador.py  firmador.py  sellador.py  validador.py  validadorv2.py  validator.py  verificador.py
pyfva/clientes/rest/: autenticador.py  firmador.py
pyfva/clientes/soap/: autenticador.py  firmador.py
pyfva/conf/: settings.py
pyfva/receptor/: client.py  rest.py  ws_service.py
pyfva/rest/: autenticador.py  core.py  firmador.py
pyfva/soap/: autenticador.py  firmador.py  receptor.py  sellador.py  settings.py  validador_certificado.py  validador_documento.py  validador_documento_v2.py  verificador.py
pyfva/tests/: __init__.py  autenticador.py  firmador.py  sellador.py  utils.py
pyfva/tests/rest/: firmador.py
pyfva/tests/soap/: autenticador.py  firmador.py  sellador.py
testdata/: bom.xml  contrafirmado.xml  no_contrafirmado.xml  test.docx  test.odp  test.odt  test.xml
